Prevent overflows and unnecessary scrolls

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+html, body {
+  max-width: 100%;
+  max-height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 .App {
   text-align: center;
 }
